--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ subtitle                 : "Applied ML concepts and experiments"
 name                     : "Chirag Khatri"
 description              : "Applied machine learning concepts and experiments"
 url                      : "https://zvovov.github.io"
-baseurl                  : ""
+baseurl                  : # ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # "/assets/images/essential_ml.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/essential_ml.png"
