Replace avatar :clown_face:

--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 # Site Author
 author:
   name             : "Chirag Khatri"
-  avatar           : "/assets/images/ck_linkedin.jpeg"
+  avatar           : "/assets/images/ck_mugshot.png"
   bio              : "Learning with machines"
   location         : "Bangalore / New Delhi, India"
   email            : # "zvovov [at] gmail"
