--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 theme                    : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "mint" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dark" # "mint" # "default", "air", "aqua", "contrast", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -96,8 +96,8 @@ analytics:
 author:
   name             : "Chirag Khatri"
   avatar           : "/assets/images/ck_mugshot.png"
-  bio              : "Learning with machines"
-  location         : "Bangalore / New Delhi, India"
+  bio              : "Learning with machines. AI grad student at University of Southern California"
+  location         : "Los Angeles, California"
   email            : # "zvovov [at] gmail"
   links:
     - label: "Linkedin"
