Add newline to bio

--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 author:
   name             : "Chirag Khatri"
   avatar           : "/assets/images/ck_mugshot.png"
-  bio              : "Learning with machines. AI grad student at University of Southern California"
+  bio              : "Learning with machines.\n\nAI Grad student at University of Southern California"
   location         : "Los Angeles, California"
   email            : # "zvovov [at] gmail"
   links:
